[fix] Prevent Sidebar from stretching

--- a/styles/components/_page.scss
+++ b/styles/components/_page.scss
@@ -2,7 +2,10 @@
   position:relative;
   display:flex;
 
-  .sidebar { flex:0 0 20%; }
+  .sidebar { 
+    flex:0 0 20%; 
+    max-width:20%;
+  }
 
   &-edit {
     position:absolute;
